# text-to-sql

./: .gitignore  README.md  pyproject.toml  requirements.txt  seed_data.sql
src/texttosql/: config.py  graph.py  llm_factory.py  main.py  mcp_server.py  nodes.py  state.py  viz.py
src/texttosql/dialects/: dialect.py  engine.py  factory.py  postgres.py
ui/: chainlit.md  chainlit_app.py  config.toml  custom.css  manage_users.py
ui/public/: custom.css  theme.json
