[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-sql-agent"
version = "0.1.0"
description = "Text-to-SQL agent using LangGraph + MCP"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=27.29.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.9",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
